Bug 38197 - selection doesn't stay textfield
Summary: selection doesn't stay textfield
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (show other bugs)
Version: 4.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2002-02-16 10:33 UTC by mail
Modified: 2017-12-02 10:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mail 2002-02-16 10:27:15 UTC
(*** This bug was imported into bugs.kde.org ***)

Package:           khtml
Version:           4.0 (using KDE 2.9.0 2 (3.0 beta2))
Severity:          normal
Installed from:    compiled sources
Compiler:          gcc version 2.95.3 20010315 (release)
OS:                Linux (i686) release 2.4.18-pre7
OS/Compiler notes: 

If you select text in a textfield and wait a little while the selection goes away. However if you select the same text again it stays. 

This is extremely annoying when you fill out forms select a bit in a field to overwrite it. When you type something the selection goes away and the selected text is not replaced.

(Submitted via bugs.kde.org)
(Called from KBugReport dialog)
Comment 1 David Joham 2002-02-17 04:52:48 UTC
Thank you for your bug report.
This bug can not be reproduced using the current development (CVS) version
of KDE. This suggests that the bug has already been fixed. The bug report w=
ill be
closed.

Seems to work fine in current CVS. If it still is broken for you in CVS pl=
ease provide a more detailed recreation in another bug report.

Thanks for the report

David
=0D
_________________________________________________________=0D
Do You Yahoo!?=0D
Get your free @yahoo.com address at http://mail.yahoo.com=0D
=0D
Comment 2 Alexander Semke 2017-12-02 10:38:10 UTC
Git commit 608da788962980bf06784faa0b65cb1e6f8fcb7a by Alexander Semke.
Committed on 02/12/2017 at 10:27.
Pushed by asemke into branch 'master'.

Use int instead of size_t for the step parameter in nsl_geom_linesim_nthpoint().
FIXED-IN: 2.5

M  +1    -1    src/backend/nsl/nsl_geom_linesim.c
M  +4    -4    src/backend/nsl/nsl_geom_linesim.h

https://commits.kde.org/labplot/608da788962980bf06784faa0b65cb1e6f8fcb7a