Use int instead of size_t for the step parameter in nsl_geom_linesim_nthpoint().

BUG: 38197
FIXED-IN: 2.5